--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h4>heading4</h4>
 <h5>heading5</h5>
 <h6>heading6</h6>
- <p>Sample paragraph nonooooooooooooooooooooooooooooooooocdbfhbverhbgitjjkngjknfg</p>
+ <p>Sample </p>
 <a href="https://www.google.com/">Google</a>
 <a href="https://www.youtube.com/"></a>  
 </body>
